Create the header of the page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>NYT article</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="left">
+          <i class="fas fa-bars"></i>
+          <i class="fas fa-search"></i>
+          <a href="#">SPACE & COSMOS</a>
+        </div>
+        <div class="center">
+          <img src="./img/NYT-logo.png" alt="NYT logo" class="nyt-logo" />
+        </div>
+        <div class="right">
+          <button>Subscribe Now</button>
+          <button>Log In</button>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
