Fix Layout of the article

--- a/index.html
+++ b/index.html
@@ -93,30 +93,24 @@
             colleagues say, that Dr. Guth was correct.
           </p>
         </article>
+        <aside>
+          <h5 class="aside-title">Editor's Picks</h5>
+          <div class="picks">
+            <a href="#" class="aside-link">
+              <div class="aside-line1"></div>
+              <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+            </a>
+            <a href="#" class="aside-link">
+              <div class="aside-line2"></div>
+              <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+            </a>
+            <a href="#" class="aside-link">
+              <div class="aside-line3"></div>
+              <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+            </a>
+          </div>
+        </aside>
       </div>
-      <aside>
-        <h5 class="aside-title">Editor's Picks</h5>
-        <div class="picks">
-          <a href="#" class="aside-link">
-            <div class="aside-line">
-              <img src="./img/aside-first.jpg" alt="article-picture" />
-            </div>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-          </a>
-          <a href="#" class="aside-link">
-            <div class="aside-line">
-              <img src="./img/aside-second.jpg" alt="article-picture" />
-            </div>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-          </a>
-          <a href="#" class="aside-link">
-            <div class="aside-line">
-              <img src="./img/aside-third.jpg" alt="article-picture" />
-            </div>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-          </a>
-        </div>
-      </aside>
     </main>
   </body>
 </html>
