--- a/index.html
+++ b/index.html
@@ -64,24 +64,35 @@
             CAMBRIDGE, Mass. — One night late in 1979, an itinerant young
             physicist named Alan Guth, with a new son and a year’s appointment
             at Stanford, stayed up late with his notebook and equations,
-            venturing far beyond the world of known physics.<br /><br />
+            venturing far beyond the world of known physics.
+          </p>
+          <p class="main-text">
             He was trying to understand why there was no trace of some exotic
             particles that should have been created in the Big Bang. Instead he
             discovered what might have made the universe bang to begin with. A
             potential hitch in the presumed course of cosmic evolution could
             have infused space itself with a special energy that exerted a
             repulsive force, causing the universe to swell faster than the speed
-            of light for a prodigiously violent instant.<br /><br />
+            of light for a prodigiously violent instant.
+          </p>
+          <p class="main-text">
             If true, the rapid engorgement would solve paradoxes like why the
             heavens look uniform from pole to pole and not like a jagged, warped
             mess. The enormous ballooning would iron out all the wrinkles and
             irregularities. Those particles were not missing, but would be
-            diluted beyond detection, like spit in the ocean.<br /><br />
+            diluted beyond detection, like spit in the ocean.
+          </p>
+
+          <p class="main-text">
             “SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page
-            and drew a double box around it.<br /><br />
+            and drew a double box around it.
+          </p>
+          <p class="main-text">
             On Monday, Dr. Guth’s starship came in. Radio astronomers reported
             that they had seen the beginning of the Big Bang, and that his
-            hypothesis, known undramatically as inflation, looked right.<br /><br />
+            hypothesis, known undramatically as inflation, looked right.
+          </p>
+          <p class="main-text">
             Reaching back across 13.8 billion years to the first sliver of
             cosmic time with telescopes at the South Pole, a team of astronomers
             led by John M. Kovac of the Harvard-Smithsonian Center for
@@ -92,23 +103,20 @@
             smoking-gun evidence of inflation, proof, Dr. Kovac and his
             colleagues say, that Dr. Guth was correct.
           </p>
+          <div class="separation"></div>
+          <ul>
+            <li>Thanks for reading The Times.</li>
+          </ul>
+          <a class="subscribe" href="#">Subscribe to The Times</a>
+          <div class="separation"></div>
+          <p class="main-text">
+            Inflation has been the workhorse of cosmology for 35 years, though
+            many, including Dr. Guth, wondered whether it could ever be proved.
+          </p>
         </article>
         <aside>
           <h5 class="aside-title">Editor's Picks</h5>
-          <div class="picks">
-            <a href="#" class="aside-link">
-              <div class="aside-line1"></div>
-              <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-            </a>
-            <a href="#" class="aside-link">
-              <div class="aside-line2"></div>
-              <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-            </a>
-            <a href="#" class="aside-link">
-              <div class="aside-line3"></div>
-              <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-            </a>
-          </div>
+          <div class="picks"></div>
         </aside>
       </div>
     </main>
