Add the second section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="first-main">
       <h1 class="article-title">
         Space Ripples Reveal Big Bang’s Smoking Gun
       </h1>
@@ -168,6 +168,18 @@
           <div class="picks"></div>
         </aside>
       </div>
+    </main>
+    <main class="second-main">
+      <h1 class="second-article-title">
+        The Theory of Inflation
+      </h1>
+      <figure class="main-image">
+        <figcaption>
+          Astronomers have found evidence to support the theory of inflation,
+          which explains how the universe expanded so uniformly and so quickly
+          in the instant after the Big Bang 13.8 billion years ago.
+        </figcaption>
+      </figure>
     </main>
   </body>
 </html>
