--- a/index.html
+++ b/index.html
@@ -165,7 +165,32 @@
         </article>
         <aside>
           <h5 class="aside-title">Editor's Picks</h5>
-          <div class="picks"></div>
+          <div class="picks">
+            <div class="grid-item">
+              <img src="./img/aside-first.jpg" alt="" />
+            </div>
+            <div class="grid-item">
+              <a href="#"
+                >Lorem ipsum dolor sit amet, consectetur adipisicing.</a
+              >
+            </div>
+            <div class="grid-item">
+              <img src="./img/aside-second.jpg" alt="" />
+            </div>
+            <div class="grid-item">
+              <a href="#"
+                >Lorem ipsum dolor sit amet, consectetur adipisicing.</a
+              >
+            </div>
+            <div class="grid-item">
+              <img src="./img/aside-third.jpg" alt="" />
+            </div>
+            <div class="grid-item">
+              <a href="#"
+                >Lorem ipsum dolor sit amet, consectetur adipisicing.</a
+              >
+            </div>
+          </div>
         </aside>
       </div>
     </main>
@@ -179,6 +204,80 @@
           which explains how the universe expanded so uniformly and so quickly
           in the instant after the Big Bang 13.8 billion years ago.
         </figcaption>
+        <div class="wrapper">
+          <div class="box1"><img src="./img/above.jpg" alt="" /></div>
+          <div class="box2">
+            <div class="description">
+              <p>
+                THE UNIVERSE is just under 14 billion years old. From our
+                position in the Milky Way galaxy, we can observe a sphere that
+                is now about 92 billion light-years across. But there's a
+                mystery. Wherever we look, the universe has an even temperature.
+              </p>
+            </div>
+            <div class="description">
+              <p>
+                NOT ENOUGH TIME The universe is not old enough for light to have
+                traveled the vast distance from one side of the universe to the
+                other, and there has not been enough time for scattered patches
+                of hot and cold to mix into an even temperature.
+              </p>
+            </div>
+            <div class="description">
+              <p>
+                DISTANT COFFEE At a smaller scale, imagine using a telescope to
+                look a mile in one direction. You see a coffee cup, and from the
+                amount of steam, you can estimate its temperature and how much
+                it has cooled.
+              </p>
+            </div>
+            <div class="description">
+              <p>
+                COFFEE EVERYWHERE Now turn around and look a mile in the other
+                direction. You see a similar coffee cup, at exactly the same
+                temperature. Coincidence? Maybe. But if you see a similar cup in
+                every direction, you might want to look for another explanation.
+              </p>
+            </div>
+          </div>
+          <div class="box3"><img src="./img/below.jpg" alt="" /></div>
+          <div class="box4">
+            <div class="description">
+              <p>
+                STILL NOT ENOUGH TIME There has not been enough time to carry
+                coffee cups from place to place before they get cold. But if all
+                the coffee cups were somehow filled from a single coffee pot,
+                all at the same time, that might explain their even temperature.
+              </p>
+            </div>
+            <div class="description">
+              <p>
+                INFLATION solves this problem. The theory proposes that, less
+                than a trillionth of a second after the Big Bang, the universe
+                expanded faster than the speed of light. Tiny ripples in the
+                violently expanding energy field eventually grew into the
+                large-scale structures of the universe.
+              </p>
+            </div>
+            <div class="description">
+              <p>
+                FLUCTUATION Astronomers have now detected evidence of these
+                ancient fluctuations in swirls of polarized light in the cosmic
+                background radiation, which is energy left over from the early
+                universe. These are gravitational waves predicted by Einstein.
+              </p>
+            </div>
+            <div class="description">
+              <p>
+                EXPANSION Returning to our coffee, imagine a single, central pot
+                expanding faster than light and cooling to an even temperature
+                as it expands. That is something like inflation. And the
+                structure of the universe mirrors the froth and foam of the
+                original pot.
+              </p>
+            </div>
+          </div>
+        </div>
       </figure>
     </main>
   </body>
