Fix aside problem

--- a/index.html
+++ b/index.html
@@ -164,31 +164,41 @@
           </section>
         </article>
         <aside>
-          <h5 class="aside-title">Editor's Picks</h5>
-          <div class="picks">
-            <div class="grid-item">
-              <img src="./img/aside-first.jpg" alt="" />
-            </div>
-            <div class="grid-item">
-              <a href="#"
-                >Lorem ipsum dolor sit amet, consectetur adipisicing.</a
-              >
-            </div>
-            <div class="grid-item">
-              <img src="./img/aside-second.jpg" alt="" />
-            </div>
-            <div class="grid-item">
-              <a href="#"
-                >Lorem ipsum dolor sit amet, consectetur adipisicing.</a
-              >
-            </div>
-            <div class="grid-item">
-              <img src="./img/aside-third.jpg" alt="" />
-            </div>
-            <div class="grid-item">
-              <a href="#"
-                >Lorem ipsum dolor sit amet, consectetur adipisicing.</a
-              >
+          <div class="aside-articles">
+            <h5 class="aside-title">Editor's Picks</h5>
+            <div class="picks">
+              <article>
+                <a href="#"
+                  ><div class="img-div">
+                    <img src="./img/aside-first.jpg" alt="article-img" />
+                  </div>
+                  <h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Laboriosam, tempora.
+                  </h3>
+                </a>
+              </article>
+              <article>
+                <a href="#"
+                  ><div class="img-div">
+                    <img src="./img/aside-second.jpg" alt="article-img" />
+                  </div>
+                  <h3>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  </h3>
+                </a>
+              </article>
+              <article>
+                <a href="#"
+                  ><div class="img-div">
+                    <img src="./img/aside-third.jpg" alt="article-img" />
+                  </div>
+                  <h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Enim.
+                  </h3>
+                </a>
+              </article>
             </div>
           </div>
         </aside>
