Add the footer of the second article

--- a/index.html
+++ b/index.html
@@ -289,6 +289,9 @@
           </div>
         </div>
       </figure>
+      <footer class="second-footer">
+        <p>By LARRY BUCHANAN and JONATHAN CORUM</p>
+      </footer>
     </main>
   </body>
 </html>
