--- a/index.html
+++ b/index.html
@@ -332,14 +332,16 @@
             Chao-Lin Kuo, a Stanford colleague and a member of Dr. Kovac’s team,
             knocked on his door with a bottle of Champagne to tell him the news.
           </p>
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/ZlfIVEy_YOA"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
+          <div class="video-container">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/ZlfIVEy_YOA"
+              frameborder="0"
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
           <figcaption>
             Stanford Professor Andrei Linde celebrates physics
             breakthroughCredit...CreditVideo by StanfordUniversity
@@ -535,6 +537,26 @@
               wind up at inflation.”
             </p>
           </section>
+          <div class="bottom-of-article">
+            <p>
+              A version of this article appears in print on March 18, 2014,
+              Section A, Page 1 of the New York edition with the headline: Space
+              Ripples Reveal Big Bang’s Smoking Gun.
+              <a href="#">Order Reprints</a> | <a href="#">Today’s Paper</a> |
+              <a href="#">Subscribe</a>
+            </p>
+          </div>
+          <div class="lower-footer">
+            <div class="right bottom-button">
+              <button>Read 615 comments</button>
+            </div>
+            <div class="social-media-icons">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fas fa-envelope"></i>
+              <i class="fas fa-share"></i>
+            </div>
+          </div>
         </article>
       </div>
     </main>
