Add the bottom navbar

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
             <div class="flex-item">
               <a href="#">
                 <div class="bottom-img-div">
-                  <img alt="#" src="/img/001.jpg" />
+                  <img alt="#" src="./img/001.jpg" />
                 </div>
                 <figcaption>European Southern Observatory</figcaption>
                 <h3>
@@ -578,7 +578,7 @@
             <div class="flex-item">
               <a href="#">
                 <div class="bottom-img-div">
-                  <img alt="#" src="/img/002.jpg" />
+                  <img alt="#" src="./img/002.jpg" />
                 </div>
                 <figcaption>Peter Komka/MTI, via Associated Press</figcaption>
                 <h3>
@@ -591,7 +591,7 @@
             <div class="flex-item">
               <a href="#">
                 <div class="bottom-img-div">
-                  <img alt="#" src="/img/003.jpg" />
+                  <img alt="#" src="./img/003.jpg" />
                 </div>
                 <figcaption>
                   Bill Ingalls/NASA, via Agence France-Presse--Getty Images
@@ -606,7 +606,7 @@
             <div class="flex-item">
               <a href="#">
                 <div class="bottom-img-div">
-                  <img alt="#" src="/img/004.jpg" />
+                  <img alt="#" src="./img/004.jpg" />
                 </div>
                 <figcaption>L. Calcada/ESO</figcaption>
                 <h3>
@@ -618,7 +618,7 @@
             <div class="flex-item">
               <a href="#">
                 <div class="bottom-img-div">
-                  <img alt="#" src="/img/005.jpg" />
+                  <img alt="#" src="./img/005.jpg" />
                 </div>
                 <figcaption>Image by Joe Skipper/Reuters</figcaption>
                 <h3>
@@ -631,7 +631,7 @@
             <div class="flex-item">
               <a href="#">
                 <div class="bottom-img-div">
-                  <img alt="#" src="/img/006.jpg" />
+                  <img alt="#" src="./img/006.jpg" />
                 </div>
                 <figcaption>NASA/jpl-Caltech/University of Arizona</figcaption>
                 <h3>
@@ -696,7 +696,7 @@
             <div class="flex-item">
               <a href="#">
                 <div class="bottom-img-div">
-                  <img alt="#" src="/img/007.jpg" />
+                  <img alt="#" src="./img/007.jpg" />
                 </div>
                 <figcaption>European Southern Observatory</figcaption>
                 <h3>
@@ -708,7 +708,7 @@
             <div class="flex-item">
               <a href="#">
                 <div class="bottom-img-div">
-                  <img alt="#" src="/img/008.jpg" />
+                  <img alt="#" src="./img/008.jpg" />
                 </div>
                 <figcaption>Peter Komka/MTI, via Associated Press</figcaption>
                 <h3>
@@ -721,7 +721,7 @@
             <div class="flex-item">
               <a href="#">
                 <div class="bottom-img-div">
-                  <img alt="#" src="/img/009.jpg" />
+                  <img alt="#" src="./img/009.jpg" />
                 </div>
                 <figcaption>
                   Bill Ingalls/NASA, via Agence France-Presse--Getty Images
@@ -736,5 +736,114 @@
           </div>
       </div>
     </main>
+    <nav class="bottom-nav">
+      <div class="enclosing-div">
+      <div class="flex-container">
+        <div class="logo-div">
+          <img src="./img/NYT-logo.png" alt="NYT-logo" class="nyt-logo">
+        </div>
+        <a href="#">Go to the Home Page</a>
+      </div>
+      <div class="flex-container bottom-sections-container">
+      <section><h3>NEWS</h3>
+      <ul>
+        <li><a href="#">Home Page</a></li>
+        <li><a href="#">World</a></li>
+        <li><a href="#">U.S.</a></li>
+        <li><a href="#">Politics</a></li>
+        <li><a href="#">Election 2020</a></li>
+        <li><a href="#">New York</a></li>
+        <li><a href="#">Business</a></li>
+        <li><a href="#">Tech</a></li>
+        <li><a href="#">Science</a></li>
+        <li><a href="#">Sports</a></li>
+        <li><a href="#">Obituaries</a></li>
+        <li><a href="#">Today's paper</a></li>
+        <li><a href="#">Corrections</a></li>
+      </ul>
+      </section>
+      <section><h3>OPINION</h3>
+        <ul>
+          <li><a href="#">Today's Opinion</a></li>
+          <li><a href="#">OP-ED Columnist</a></li>
+          <li><a href="#">Editorials</a></li>
+          <li><a href="#">OP-ED Contributors</a></li>
+          <li><a href="#">Letters</a></li>
+          <li><a href="#">Sunday Review</a></li>
+          <li><a href="#">Video: Opinion</a></li>
+        </ul>
+      </section>
+      <section><h3>ARTS</h3>
+        <ul>
+          <li><a href="#">Today's Arts</a></li>
+          <li><a href="#">Art & Design</a></li>
+          <li><a href="#">Books</a></li>
+          <li><a href="#">Dance</a></li>
+          <li><a href="#">Movies</a></li>
+          <li><a href="#">Music</a></li>
+          <li><a href="#">Pop Culture</a></li>
+          <li><a href="#">Television</a></li>
+          <li><a href="#">Theater</a></li>
+          <li><a href="#">Video: Arts</a></li>
+        </ul>
+      </section>
+      <section><h3>LIVING</h3>
+        <ul>
+          <li><a href="#">At Home</a></li>
+          <li><a href="#">Automobiles</a></li>
+          <li><a href="#">Games</a></li>
+          <li><a href="#">Education</a></li>
+          <li><a href="#">Food</a></li>
+          <li><a href="#">Health</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Love</a></li>
+          <li><a href="#">Magazine</a></li>
+          <li><a href="#">Parenting</a></li>
+          <li><a href="#">Real Estate</a></li>
+          <li><a href="#">Recipes</a></li>
+          <li><a href="#">Style</a></li>
+          <li><a href="#">T Magazine</a></li>
+          <li><a href="#">Trouble</a></li>
+        </ul>
+      </section>
+      <section><h3>MORE</h3>
+        <ul>
+          <li><a href="#">Reader Center</a></li>
+          <li><a href="#">Wirecutter</a></li>
+          <li><a href="#">Live Events</a></li>
+          <li><a href="#">The Learning Network</a></li>
+          <li><a href="#">Tools & Services</a></li>
+          <li><a href="#">Multimedia</a></li>
+          <li><a href="#">Photography</a></li>
+          <li><a href="#">Video</a></li>
+          <li><a href="#">Newsletters</a></li>
+          <li><a href="#">TimesMachine</a></li>
+          <li><a href="#">NYT Store</a></li>
+          <li><a href="#">Times Journeys</a></li>
+          <li><a href="#">Manage My Account</a></li>
+        </ul>
+      </section>
+      <section><h3>SUBSCRIBE</h3>
+        <ul>
+          <li><a href="#">Home Delivery</a></li>
+          <li><a href="#">Digital Subscriptions</a></li>
+          <li><a href="#">Games</a></li>
+          <li><a href="#">Cooking</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Email Newsletters</a></li>
+          <li><a href="#">Corporate Subscriptions</a></li>
+          <li><a href="#">Education Rate</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Mobile Applications</a></li>
+          <li><a href="#">Replica Editon</a></li>
+          <li><a href="#">Español</a></li>
+          <li><a href="#">中文网</a></li>
+        </ul>
+      </section>
+    </div>
+    </div>
+    </nav>
   </body>
 </html>
