--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -8,8 +10,6 @@
       integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"
     />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NYT article</title>
   </head>
   <body>
@@ -24,8 +24,8 @@
           <img src="./img/NYT-logo.png" alt="NYT logo" class="nyt-logo" />
         </div>
         <div class="right">
-          <button>Subscribe Now</button>
-          <button>Log In</button>
+          <button type="button">Subscribe Now</button>
+          <button type="button">Log In</button>
         </div>
       </nav>
     </header>
@@ -335,7 +335,6 @@
               width="560"
               height="315"
               src="https://www.youtube.com/embed/ZlfIVEy_YOA"
-              frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
@@ -548,7 +547,7 @@
           </div>
           <div class="lower-footer">
             <div class="right bottom-button">
-              <button>Read 615 comments</button>
+              <button type="button">Read 615 comments</button>
             </div>
             <div class="social-media-icons">
               <i class="fab fa-facebook-f"></i>
