The fixed footer

--- a/index.html
+++ b/index.html
@@ -953,5 +953,14 @@
         </ul>
       </nav>
     </footer>
+    <footer class="fixed-footer">
+      <div>
+        <p>Access more of The Times by creating a free account or logging in</p>
+      </div>
+      <div>
+        <p>Expand</p>
+        <i class="fas fa-chevron-up"></i>
+      </div>
+    </footer>
   </body>
 </html>
