Add json files in gitignore

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="left black">
           <i class="fas fa-bars"></i>
           <i class="fas fa-search"></i>
-          <a href="#" class="dec-none">SPACE & COSMOS</a>
+          <a href="#" class="dec-none black">SPACE & COSMOS</a>
         </div>
         <div class="center">
           <img src="./img/NYT-logo.png" alt="NYT logo" class="nyt-logo" />
