Fix repeated css rules

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h1 class="article-title">
         Space Ripples Reveal Big Bang’s Smoking Gun
       </h1>
-      <figure class="main-image w-100">
+      <figure class="main-image w-100 georgia">
         <img class="w-100" src="./img/cosmos.jpg" alt="main-image" />
         <figcaption>
           Alan Guth was one of the first physicists to hypothesize the existence
@@ -46,7 +46,7 @@
       <div class="container">
         <div>
           <footer>
-            <span class="author black"
+            <span class="author bold black"
               >By <a class="dec-none black" href="#">Dennis Overbye</a></span
             >
             <div class="lower-footer d-flex">
@@ -109,7 +109,7 @@
           <ul>
             <li>Thanks for reading The Times.</li>
           </ul>
-          <a class="subscribe dec-none" href="#">Subscribe to The Times</a>
+          <a class="subscribe bold dec-none" href="#">Subscribe to The Times</a>
           <div class="separation"></div>
           <p class="main-text">
             Inflation has been the workhorse of cosmology for 35 years, though
@@ -209,7 +209,7 @@
         <h1 class="second-article-title">
           The Theory of Inflation
         </h1>
-        <figure class="main-image w-100">
+        <figure class="main-image w-100 georgia">
           <figcaption>
             Astronomers have found evidence to support the theory of inflation,
             which explains how the universe expanded so uniformly and so quickly
@@ -347,7 +347,7 @@
             ></iframe>
           </div>
           <figure>
-            <figcaption>
+            <figcaption class="georgia">
               Stanford Professor Andrei Linde celebrates physics
               breakthroughCredit...CreditVideo by StanfordUniversity
             </figcaption>
@@ -429,7 +429,7 @@
               said, wintering over in 1994. “I’ve been hooked ever since,” he
               said.
             </p>
-            <figure class="main-image w-100 response">
+            <figure class="main-image w-100 response georgia">
               <img class="w-100" src="./img/antena.jpg" alt="main-image" />
               <figcaption>
                 The Bicep2 telescope, in the foreground, was used to detect the
@@ -552,7 +552,7 @@
               <a href="#">Subscribe</a>
             </p>
           </div>
-          <div class="lower-footer">
+          <div class="lower-footer d-flex">
             <div class="right bottom-button">
               <button type="button">Read 615 comments</button>
             </div>
@@ -568,7 +568,7 @@
       <div class="more-articles">
         <div class="left-div">
           <a class="dec-none" href="#"><h2>More in Space and Astronomy</h2></a>
-          <div class="flex-container d-flex">
+          <div class="flex-container d-flex georgia">
             <div class="flex-item georgia">
               <a href="#" class="dec-none">
                 <div class="bottom-img-div">
@@ -665,64 +665,64 @@
         <div class="right-div">
           <h2 class="dec-none">Most Popular</h2>
           <h3>
-            <a class="dec-none black" href="#"
+            <a class="dec-none black georgia" href="#"
               >U.S. Heads to United Nations to Demand ‘Snapback’ of Sanctions
               Against Iran</a
             >
           </h3>
           <h3>
-            <a class="dec-none black" href="#"
+            <a class="dec-none black georgia" href="#"
               >Facebook Removes 790 QAnon Groups to Fight Conspiracy Theory</a
             >
           </h3>
           <h3>
-            <a class="dec-none black" href="#"
+            <a class="dec-none black georgia" href="#"
               >When the V.P. Is ‘the Woman’s Spot’</a
             >
           </h3>
           <h3>
-            <a class="dec-none black" href="#"
+            <a class="dec-none black georgia" href="#"
               >On the Road, Again: ‘Route One/USA’ Revisits 1980s America</a
             >
           </h3>
           <h3>
-            <a class="dec-none black" href="#"
+            <a class="dec-none black georgia" href="#"
               >The Monotony of Family Meals Can Trigger Past Disordered
               Eating</a
             >
           </h3>
           <h3>
-            <a class="dec-none black" href="#"
+            <a class="dec-none black georgia" href="#"
               >Jill Biden Is Not Melania Trump</a
             >
           </h3>
           <h3>
-            <a class="dec-none black" href="#"
+            <a class="dec-none black georgia" href="#"
               >Trump and Miss Moscow: Report Examines Possible Compromises in
               Russia Trips</a
             >
           </h3>
           <h3>
-            <a class="dec-none black" href="#"
+            <a class="dec-none black georgia" href="#"
               >Amazon halts sales of shirts that used a derogatory term to refer
               to Kamala Harris.</a
             >
           </h3>
           <h3>
-            <a class="dec-none black" href="#"
+            <a class="dec-none black georgia" href="#"
               >Trump, who has said Democrats tried to ‘spy’ on him in 2016,
               suggests Barr isn’t doing enough to investigate.</a
             >
           </h3>
           <h3>
-            <a class="dec-none black" href="#"
+            <a class="dec-none black georgia" href="#"
               >He Got Her Attention, but the Guitar Hero Had to Go</a
             >
           </h3>
         </div>
         <div class="left-div">
           <a href="#"><h2>Editors’ Picks</h2></a>
-          <div class="flex-container d-flex">
+          <div class="flex-container d-flex georgia">
             <div class="flex-item">
               <a class="dec-none" href="#">
                 <div class="bottom-img-div">
@@ -781,7 +781,7 @@
           <a class="go" href="#">Go to the Home Page</a>
         </div>
         <div class="last-flex-container d-flex bottom-sections-container">
-          <section>
+          <section class="fw-300">
             <h3>NEWS</h3>
             <ul>
               <li><a class="dec-none" href="#">Home Page</a></li>
@@ -799,7 +799,7 @@
               <li><a class="dec-none" href="#">Corrections</a></li>
             </ul>
           </section>
-          <section>
+          <section class="fw-300">
             <h3>OPINION</h3>
             <ul>
               <li><a class="dec-none" href="#">Today's Opinion</a></li>
@@ -811,7 +811,7 @@
               <li><a class="dec-none" href="#">Video: Opinion</a></li>
             </ul>
           </section>
-          <section>
+          <section class="fw-300">
             <h3>ARTS</h3>
             <ul>
               <li><a class="dec-none" href="#">Today's Arts</a></li>
@@ -826,7 +826,7 @@
               <li><a class="dec-none" href="#">Video: Arts</a></li>
             </ul>
           </section>
-          <section>
+          <section class="fw-300">
             <h3>LIVING</h3>
             <ul>
               <li><a class="dec-none" href="#">At Home</a></li>
@@ -846,7 +846,7 @@
               <li><a class="dec-none" href="#">Trouble</a></li>
             </ul>
           </section>
-          <section>
+          <section class="fw-300">
             <h3>MORE</h3>
             <ul>
               <li><a class="dec-none" href="#">Reader Center</a></li>
@@ -866,9 +866,9 @@
           </section>
           <section class="special-section">
             <h3>SUBSCRIBE</h3>
-            <ul class="special-ul">
+            <ul class="special-ul bold">
               <li>
-                <a class="dec-none" href="#"
+                <a class="dec-none bold" href="#"
                   ><svg class="css-r5ic95" viewBox="0 0 14 13" fill="#000">
                     <path
                       d="M13.1,11.7H3.5V1.2h9.6V11.7zM13.1,0.4H3.5C3,0.4,2.6,0.8,2.6,1.2v2.2H0.9C0.4,3.4,0,3.8,0,4.3v5.2v1.5c0,0.8,0.8,1.5,1.8,1.5h1.7h0h7.4h2.2c0.5,0,0.9-0.4,0.9-0.9V1.2C14,0.8,13.6,0.4,13.1,0.4"
@@ -883,7 +883,7 @@
                 >
               </li>
               <li>
-                <a class="dec-none" href="#"
+                <a class="dec-none bold" href="#"
                   ><svg class="css-r5ic95" viewBox="0 0 10 13">
                     <path
                       fill="#000"
@@ -894,7 +894,7 @@
                 >
               </li>
               <li>
-                <a class="dec-none" href="#"
+                <a class="dec-none bold" href="#"
                   ><svg class="css-r5ic95" viewBox="0 0 13 13" fill="#000">
                     <polygon points="0,-93.6 0,-86.9 6.6,-93.6"></polygon>
                     <polygon points="0.9,-86 7.5,-86 7.5,-92.6"></polygon>
@@ -923,7 +923,7 @@
                 >
               </li>
               <li>
-                <a class="dec-none" href="#"
+                <a class="dec-none bold" href="#"
                   ><svg class="css-r5ic95" viewBox="0 0 13 13" fill="#000">
                     <path
                       d="M12,2.9L9.6,5.2c-0.1,0.1-0.3,0.1-0.4,0C9.1,5.2,9.1,5,9.3,4.9l2.4-2.4c-0.2-0.2-0.3-0.3-0.5-0.5L8.7,4.3c-0.1,0.1-0.3,0.1-0.4,0C8.2,4.3,8.2,4.1,8.4,4l2.4-2.4c-0.3-0.3-0.5-0.5-0.5-0.5L7.6,3.4C7.1,4,6.8,5.1,7.1,5.8c-1.4,1-4.6,3.5-5.1,4c-0.8,0.8-0.4,1.8-0.3,1.9c0,0,0,0,0,0c0,0,0,0,0,0c0.1,0.1,1.1,0.5,1.9-0.3c0.4-0.4,2.9-3.6,3.9-5C8.4,6.9,9.6,6.6,10.2,6l2.3-2.6C12.5,3.4,12.3,3.2,12,2.9z"
