Add button to the Hamburger and Anchor tag to the logo

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
     <header>
       <nav class="navbar d-flex">
         <div class="left black">
-          <i class="fas fa-bars"></i>
+          <button type="menu"><i class="fas fa-bars"></i></button>
           <i class="fas fa-search"></i>
           <a href="#" class="dec-none black">SPACE & COSMOS</a>
         </div>
-        <div class="center">
-          <img src="./img/NYT-logo.png" alt="NYT logo" class="nyt-logo" />
-        </div>
+        <a href="#">
+          <div class="center">
+            <img src="./img/NYT-logo.png" alt="NYT logo" class="nyt-logo" />
+          </div>
+        </a>
         <div class="right">
           <button type="button">Subscribe Now</button>
           <button type="button">Log In</button>
