--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </h1>
       <figure class="main-image w-100 georgia">
         <img class="w-100" src="./img/cosmos.jpg" alt="main-image" />
-        <figcaption>
+        <figcaption class="fs-15px">
           Alan Guth was one of the first physicists to hypothesize the existence
           of inflation, which explains how the universe expanded so uniformly
           and so quickly in the instant after the Big Bang 13.8 billion years
@@ -108,10 +108,12 @@
             colleagues say, that Dr. Guth was correct.
           </p>
           <div class="separation"></div>
-          <ul>
+          <ul class="fs-15px">
             <li>Thanks for reading The Times.</li>
           </ul>
-          <a class="subscribe bold dec-none" href="#">Subscribe to The Times</a>
+          <a class="subscribe bold dec-none fs-15px" href="#"
+            >Subscribe to The Times</a
+          >
           <div class="separation"></div>
           <p class="main-text">
             Inflation has been the workhorse of cosmology for 35 years, though
@@ -212,16 +214,16 @@
           The Theory of Inflation
         </h1>
         <figure class="main-image w-100 georgia">
-          <figcaption>
+          <figcaption class="fs-15px">
             Astronomers have found evidence to support the theory of inflation,
             which explains how the universe expanded so uniformly and so quickly
             in the instant after the Big Bang 13.8 billion years ago.
           </figcaption>
-          <div class="wrapper">
+          <div class="wrapper w-1000 grid-col-rep4-1fr">
             <div class="box1">
               <img class="w-100" src="./img/above.jpg" alt="" />
             </div>
-            <div class="box2">
+            <div class="box2 w-1000 grid-col-rep4-1fr">
               <div class="description">
                 <p>
                   THE UNIVERSE is just under 14 billion years old. From our
@@ -260,7 +262,7 @@
             <div class="box3">
               <img class="w-100" src="./img/below.jpg" alt="" />
             </div>
-            <div class="box4">
+            <div class="box4 w-1000 grid-col-rep4-1fr">
               <div class="description">
                 <p>
                   STILL NOT ENOUGH TIME There has not been enough time to carry
@@ -349,7 +351,7 @@
             ></iframe>
           </div>
           <figure>
-            <figcaption class="georgia">
+            <figcaption class="georgia fs-15px">
               Stanford Professor Andrei Linde celebrates physics
               breakthroughCredit...CreditVideo by StanfordUniversity
             </figcaption>
@@ -433,7 +435,7 @@
             </p>
             <figure class="main-image w-100 response georgia">
               <img class="w-100" src="./img/antena.jpg" alt="main-image" />
-              <figcaption>
+              <figcaption class="fs-15px">
                 The Bicep2 telescope, in the foreground, was used to detect the
                 faint spiraling gravity patterns — the signature of a universe
                 being wrenched violently apart at its birth.Credit...Steffen
@@ -569,7 +571,9 @@
       </div>
       <div class="more-articles">
         <div class="left-div">
-          <a class="dec-none" href="#"><h2>More in Space and Astronomy</h2></a>
+          <a class="dec-none" href="#"
+            ><h2 class="fs-16px">More in Space and Astronomy</h2></a
+          >
           <div class="flex-container d-flex georgia">
             <div class="flex-item georgia">
               <a href="#" class="dec-none">
@@ -577,7 +581,9 @@
                   <img class="w-100" alt="#" src="./img/001.jpg" />
                 </div>
                 <figure>
-                  <figcaption>European Southern Observatory</figcaption>
+                  <figcaption class="fs-15px">
+                    European Southern Observatory
+                  </figcaption>
                 </figure>
                 <h3>
                   This Star Looked Like It Would Explode. Maybe It Just Sneezed
@@ -591,7 +597,9 @@
                   <img class="w-100" alt="#" src="./img/002.jpg" />
                 </div>
                 <figure>
-                  <figcaption>Peter Komka/MTI, via Associated Press</figcaption>
+                  <figcaption class="fs-15px">
+                    Peter Komka/MTI, via Associated Press
+                  </figcaption>
                 </figure>
                 <h3>
                   Amazon Satellites Add to Astronomers’ Worries About the Night
@@ -606,7 +614,7 @@
                   <img class="w-100" alt="#" src="./img/003.jpg" />
                 </div>
                 <figure>
-                  <figcaption>
+                  <figcaption class="fs-15px">
                     Bill Ingalls/NASA, via Agence France-Presse--Getty Images
                   </figcaption>
                 </figure>
@@ -623,7 +631,7 @@
                   <img class="w-100" alt="#" src="./img/004.jpg" />
                 </div>
                 <figure>
-                  <figcaption>L. Calcada/ESO</figcaption>
+                  <figcaption class="fs-15px">L. Calcada/ESO</figcaption>
                 </figure>
                 <h3>
                   A Star Went Supernova in 1987. Where Is It Now?
@@ -637,7 +645,9 @@
                   <img class="w-100" alt="#" src="./img/005.jpg" />
                 </div>
                 <figure>
-                  <figcaption>Image by Joe Skipper/Reuters</figcaption>
+                  <figcaption class="fs-15px">
+                    Image by Joe Skipper/Reuters
+                  </figcaption>
                 </figure>
                 <h3>
                   NASA Launches Perseverance Rover, Capping Summer of Missions
@@ -652,7 +662,7 @@
                   <img class="w-100" alt="#" src="./img/006.jpg" />
                 </div>
                 <figure>
-                  <figcaption>
+                  <figcaption class="fs-15px">
                     NASA/jpl-Caltech/University of Arizona
                   </figcaption>
                 </figure>
@@ -665,7 +675,7 @@
           </div>
         </div>
         <div class="right-div">
-          <h2 class="dec-none">Most Popular</h2>
+          <h2 class="dec-none fs-16px">Most Popular</h2>
           <h3>
             <a class="dec-none black georgia" href="#"
               >U.S. Heads to United Nations to Demand ‘Snapback’ of Sanctions
@@ -731,7 +741,9 @@
                   <img class="w-100" alt="#" src="./img/007.jpg" />
                 </div>
                 <figure>
-                  <figcaption>European Southern Observatory</figcaption>
+                  <figcaption class="fs-15px">
+                    European Southern Observatory
+                  </figcaption>
                 </figure>
                 <h3>
                   They’re Teens Biking Across a Turbulent Country. The Lessons
@@ -746,7 +758,9 @@
                   <img class="w-100" alt="#" src="./img/008.jpg" />
                 </div>
                 <figure>
-                  <figcaption>Peter Komka/MTI, via Associated Press</figcaption>
+                  <figcaption class="fs-15px">
+                    Peter Komka/MTI, via Associated Press
+                  </figcaption>
                 </figure>
                 <h3>
                   The Japanese Surrender: A Sailor’s Perspective
@@ -760,7 +774,7 @@
                   <img class="w-100" alt="#" src="./img/009.jpg" />
                 </div>
                 <figure>
-                  <figcaption>
+                  <figcaption class="fs-15px">
                     Bill Ingalls/NASA, via Agence France-Presse--Getty Images
                   </figcaption>
                 </figure>
@@ -785,7 +799,7 @@
         <div class="last-flex-container d-flex bottom-sections-container">
           <section class="fw-300">
             <h3>NEWS</h3>
-            <ul>
+            <ul class="fs-15px">
               <li><a class="dec-none" href="#">Home Page</a></li>
               <li><a class="dec-none" href="#">World</a></li>
               <li><a class="dec-none" href="#">U.S.</a></li>
@@ -803,7 +817,7 @@
           </section>
           <section class="fw-300">
             <h3>OPINION</h3>
-            <ul>
+            <ul class="fs-15px">
               <li><a class="dec-none" href="#">Today's Opinion</a></li>
               <li><a class="dec-none" href="#">OP-ED Columnist</a></li>
               <li><a class="dec-none" href="#">Editorials</a></li>
@@ -815,7 +829,7 @@
           </section>
           <section class="fw-300">
             <h3>ARTS</h3>
-            <ul>
+            <ul class="fs-15px">
               <li><a class="dec-none" href="#">Today's Arts</a></li>
               <li><a class="dec-none" href="#">Art & Design</a></li>
               <li><a class="dec-none" href="#">Books</a></li>
@@ -830,7 +844,7 @@
           </section>
           <section class="fw-300">
             <h3>LIVING</h3>
-            <ul>
+            <ul class="fs-15px">
               <li><a class="dec-none" href="#">At Home</a></li>
               <li><a class="dec-none" href="#">Automobiles</a></li>
               <li><a class="dec-none" href="#">Games</a></li>
@@ -850,7 +864,7 @@
           </section>
           <section class="fw-300">
             <h3>MORE</h3>
-            <ul>
+            <ul class="fs-15px">
               <li><a class="dec-none" href="#">Reader Center</a></li>
               <li><a class="dec-none" href="#">Wirecutter</a></li>
               <li><a class="dec-none" href="#">Live Events</a></li>
@@ -870,7 +884,7 @@
             <h3>SUBSCRIBE</h3>
             <ul class="special-ul bold">
               <li>
-                <a class="dec-none bold" href="#"
+                <a class="dec-none bold fs-16px" href="#"
                   ><svg class="css-r5ic95" viewBox="0 0 14 13" fill="#000">
                     <path
                       d="M13.1,11.7H3.5V1.2h9.6V11.7zM13.1,0.4H3.5C3,0.4,2.6,0.8,2.6,1.2v2.2H0.9C0.4,3.4,0,3.8,0,4.3v5.2v1.5c0,0.8,0.8,1.5,1.8,1.5h1.7h0h7.4h2.2c0.5,0,0.9-0.4,0.9-0.9V1.2C14,0.8,13.6,0.4,13.1,0.4"
@@ -955,7 +969,7 @@
     </nav>
     <footer>
       <nav class="final-footer">
-        <ul>
+        <ul class="fs-15px">
           <li>&copy; 2020 The New York Times Company</li>
           <li>NYTCo</li>
           <li>Contact us</li>
@@ -972,7 +986,7 @@
         </ul>
       </nav>
     </footer>
-    <footer class="fixed-footer">
+    <footer class="fixed-footer fs-15px">
       <div>
         <p>Access more of The Times by creating a free account or logging in</p>
       </div>
