--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           of inflation, which explains how the universe expanded so uniformly
           and so quickly in the instant after the Big Bang 13.8 billion years
           ago.
-          <span>Rick Friedman for The New York Times</span>
+          <span class="fs-13px">Rick Friedman for The New York Times</span>
         </figcaption>
       </figure>
       <div class="container d-grid">
@@ -303,7 +303,7 @@
           </div>
         </figure>
         <footer class="second-footer">
-          <p>By LARRY BUCHANAN and JONATHAN CORUM</p>
+          <p class="fs-13px">By LARRY BUCHANAN and JONATHAN CORUM</p>
         </footer>
       </div>
       <div class="container d-grid">
@@ -801,7 +801,7 @@
           class="last-flex-container d-flex space-between bottom-sections-container"
         >
           <section class="fw-300">
-            <h3>NEWS</h3>
+            <h3 class="fs-13px">NEWS</h3>
             <ul class="fs-15px">
               <li><a class="dec-none" href="#">Home Page</a></li>
               <li><a class="dec-none" href="#">World</a></li>
@@ -819,7 +819,7 @@
             </ul>
           </section>
           <section class="fw-300">
-            <h3>OPINION</h3>
+            <h3 class="fs-13px">OPINION</h3>
             <ul class="fs-15px">
               <li><a class="dec-none" href="#">Today's Opinion</a></li>
               <li><a class="dec-none" href="#">OP-ED Columnist</a></li>
@@ -831,7 +831,7 @@
             </ul>
           </section>
           <section class="fw-300">
-            <h3>ARTS</h3>
+            <h3 class="fs-13px">ARTS</h3>
             <ul class="fs-15px">
               <li><a class="dec-none" href="#">Today's Arts</a></li>
               <li><a class="dec-none" href="#">Art & Design</a></li>
@@ -846,7 +846,7 @@
             </ul>
           </section>
           <section class="fw-300">
-            <h3>LIVING</h3>
+            <h3 class="fs-13px">LIVING</h3>
             <ul class="fs-15px">
               <li><a class="dec-none" href="#">At Home</a></li>
               <li><a class="dec-none" href="#">Automobiles</a></li>
@@ -866,7 +866,7 @@
             </ul>
           </section>
           <section class="fw-300">
-            <h3>MORE</h3>
+            <h3 class="fs-13px">MORE</h3>
             <ul class="fs-15px">
               <li><a class="dec-none" href="#">Reader Center</a></li>
               <li><a class="dec-none" href="#">Wirecutter</a></li>
@@ -884,7 +884,7 @@
             </ul>
           </section>
           <section class="special-section">
-            <h3>SUBSCRIBE</h3>
+            <h3 class="fs-13px">SUBSCRIBE</h3>
             <ul class="special-ul bold">
               <li>
                 <a class="dec-none bold fs-16px" href="#"
