--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header>
       <nav class="navbar d-flex space-between">
         <div class="left black">
-          <button type="menu"><i class="fas fa-bars"></i></button>
+          <button class="border-none" type="menu">
+            <i class="fas fa-bars"></i>
+          </button>
           <i class="fas fa-search"></i>
           <a href="#" class="dec-none black">SPACE & COSMOS</a>
         </div>
@@ -26,8 +28,10 @@
           </div>
         </a>
         <div class="right">
-          <button class="fs-11px" type="button">Subscribe Now</button>
-          <button class="fs-11px" type="button">Log In</button>
+          <button class="fs-11px border-none" type="button">
+            Subscribe Now
+          </button>
+          <button class="fs-11px border-none" type="button">Log In</button>
         </div>
       </nav>
     </header>
@@ -59,8 +63,8 @@
                 <i class="fab fa-twitter"></i>
                 <i class="fas fa-envelope"></i>
                 <i class="fas fa-share"></i>
-                <i class="far fa-bookmark"></i>
-                <i class="far fa-comment-alt"></i>
+                <i class="far border-none fa-bookmark"></i>
+                <i class="far border-none fa-comment-alt"></i>
               </div>
             </div>
           </footer>
@@ -342,7 +346,7 @@
           </p>
           <div class="video-container w-100">
             <iframe
-              class="w-100"
+              class="w-100 border-none"
               width="560"
               height="315"
               src="https://www.youtube.com/embed/ZlfIVEy_YOA"
@@ -547,18 +551,21 @@
               wind up at inflation.”
             </p>
           </section>
-          <div class="bottom-of-article">
+          <div class="bottom-of-article color-102">
             <p>
               A version of this article appears in print on March 18, 2014,
               Section A, Page 1 of the New York edition with the headline: Space
               Ripples Reveal Big Bang’s Smoking Gun.
-              <a href="#">Order Reprints</a> | <a href="#">Today’s Paper</a> |
-              <a href="#">Subscribe</a>
+              <a class="color-102" href="#">Order Reprints</a> |
+              <a class="color-102" href="#">Today’s Paper</a> |
+              <a class="color-102" href="#">Subscribe</a>
             </p>
           </div>
-          <div class="lower-footer d-flex">
+          <div class="lower-footer d-flex space-between">
             <div class="right bottom-button">
-              <button type="button">Read 615 comments</button>
+              <button class="border-none" type="button">
+                Read 615 comments
+              </button>
             </div>
             <div class="social-media-icons">
               <i class="fab fa-facebook-f"></i>
