Fix stylelint and webhint errors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <nav class="navbar d-flex space-between">
         <div class="left black">
-          <button class="border-none" type="menu">
+          <button class="border-none" type="button">
             <i class="fas fa-bars"></i>
           </button>
           <i class="fas fa-search"></i>
